
2012-09-14  Carsten Haitzler (The Rasterman)

       * Add env EVAS_GL_NO_BLACKLIST to disable blacklisting.

2012-09-17  Carsten Haitzler (The Rasterman)

       * Add evas_device API for being able to register devices, set
       their names, descriptions, classes, parents, sources etc. etc.

2012-09-20  Carsten Haitzler (The Rasterman)

       * Fix native surface crash when setting to null in some
       situations.

2012-09-24  Sung W. Park (sung_)

       * Refactored Evas GL engine code so wayland_egl and gl_x11 and other
       engines can share the same code. The common codes are in gl_common/
       directory and evas_engine just has to implement a few engine functions.

2012-09-26  Carsten Haitzler (The Rasterman)

       * Add the ability via env vars to do partial swaps in the gl
       engine. This requires that we also can get from gl info as to
       if a swap was a copy, swap, discard and if a swap with 2 or 3 
       buffers. don't have that but env var will do for now for testing.

2012-09-27  Jiyoun Park (jypark)

       * Add the object display mode hint. this can be used to check object
       mode like compress or expand or etc

2012-10-03  Mike Blumenkrantz

       * evas_object_del() now accepts NULL more peacefully

2012-10-05  Sung W. Park (sung_)

       * Added Debug feature for Evas GL's GL APIs. It can be set with 
       EVAS_GL_API_DEBUG=1 and when it is set, all the GL calls will check
       if make_current has been properly called.  Also, it'll check if all
       the GL calls are called within the Pixel Getter function for Direct
       Rendering option.

2012-10-09 Daniel Zaoui and Tom Hacohen

	* Evas: change Evas to use Eo.
	This change adds Eo support to Evas while keeping the old API intact.
	For more information, go to Eo.

2012-10-10  Carsten Haitzler (The Rasterman)

       * Fix font sizing issues when size scaling happens to down down
       when it should round up. happens in rare sizing situations and fonts.
