@@ -38,3 +38,4 @@ Rafael Antognolli <antognolli@profusion.mobi>
 Daniel Zaoui <daniel.zaoui@samsung.com>
 Christophe Sadoine <chris@indefini.org>
 Igor Murzov <e-mail@date.by>
+Sohyun Kim <anna1014.kim@samsung.com>
