@@ -12,5 +12,5 @@
 "   gl_Position = mvp * vertex;\n"
 "   col = color;\n"
 "   tex_c = tex_coord;\n"
-"   tex_cuv = tex_coord2 * 0.25;\n"
+"   tex_cuv = tex_coord2 * 0.5;\n"
 "}\n"
