@@ -12,5 +12,5 @@ void main()
    gl_Position = mvp * vertex;
    col = color;
    tex_c = tex_coord;
-   tex_cuv = tex_coord2 * 0.25;
+   tex_cuv = tex_coord2 * 0.5;
 }
